added unit test structure and 1 new test